Bug 430828 - After entering wrong password, password field stays greyed out with systemd-homed user
Summary: After entering wrong password, password field stays greyed out with systemd-h...
Status: RESOLVED FIXED
Alias: None
Product: policykit-kde-agent-1
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.20.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jaroslav Reznik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-26 13:45 UTC by Sebastian Hirsch
Modified: 2025-01-15 21:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
Password text field is permanently greyed out. (79.14 KB, image/png)
2020-12-26 13:45 UTC, Sebastian Hirsch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Hirsch 2020-12-26 13:45:24 UTC
Created attachment 134333 [details]
Password text field is permanently greyed out.

SUMMARY

After typing the wrong password in the GUI-Prompt, password field stays greyed out after entering the wrong password with an user account created with systemd-homed.
The option is to close the prompt and redo the action that triggered the kdesu prompt. Sorry if this report is in the wrong category, please change it if needed!

STEPS TO REPRODUCE
1. Do something that triggers the kdesu prompt, for example edit with kate a system file like /etc/environment.
2. Type in the wrong password
3. Type enter or click the okay button

OBSERVED RESULT

The password text field greys out and says "Sorry, try again". With the greyed out prompt the password cannot be reentered. The prompt needs to be closed and triggered again.

EXPECTED RESULT

The password text field gets accessible again and the password can be reentered.

SOFTWARE/OS VERSIONS

Operating System: Arch Linux
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Systemd Version: 247.1
Kernel Version: 5.9.14-zen1-1-zen
OS Type: 64-bit
Processors: 16 × AMD Ryzen 7 1700X Eight-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: Radeon RX Vega
Comment 1 Harald Sitter 2025-01-15 12:38:43 UTC
Git commit 3007204375b872dfca67657574642f7d9214ada9 by Harald Sitter.
Committed on 15/01/2025 at 10:03.
Pushed by sitter into branch 'master'.

improve systemd-homed support

when entering a wrong password the polkit sessions issues an error
followed by a request to "try again". this was previously ignored,
essentialy breaking the dialog after having entered and incorrect
password since it was locked into failure state

reject any existing password when a request gets sent

M  +5    -0    QuickAuthDialog.cpp
M  +1    -0    QuickAuthDialog.h
M  +4    -2    policykitlistener.cpp
M  +13   -3    qml/QuickAuthDialog.qml

https://invent.kde.org/plasma/polkit-kde-agent-1/-/commit/3007204375b872dfca67657574642f7d9214ada9
Comment 2 Harald Sitter 2025-01-15 12:49:07 UTC
Git commit a81bab365b7f142eddf5402d708438fb6c1a83d8 by Harald Sitter.
Committed on 15/01/2025 at 12:38.
Pushed by sitter into branch 'Plasma/6.3'.

improve systemd-homed support

when entering a wrong password the polkit sessions issues an error
followed by a request to "try again". this was previously ignored,
essentialy breaking the dialog after having entered and incorrect
password since it was locked into failure state

reject any existing password when a request gets sent


(cherry picked from commit 3007204375b872dfca67657574642f7d9214ada9)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +5    -0    QuickAuthDialog.cpp
M  +1    -0    QuickAuthDialog.h
M  +4    -2    policykitlistener.cpp
M  +13   -3    qml/QuickAuthDialog.qml

https://invent.kde.org/plasma/polkit-kde-agent-1/-/commit/a81bab365b7f142eddf5402d708438fb6c1a83d8