improve systemd-homed support

when entering a wrong password the polkit sessions issues an error
followed by a request to "try again". this was previously ignored,
essentialy breaking the dialog after having entered and incorrect
password since it was locked into failure state

reject any existing password when a request gets sent

BUG: 430828